GeNetIt_0.1-0
=================
* First release of package for Spatial Graph-theoretic Genetic Gravity Modelling

GeNetIt_0.1-1
=================
* Added log likelihood to the gravity function,  which is the current preference over AIC in 
  evaluating competing models

GeNetIt_0.1-2
=================
* Added function "compare.models" to evaluate competing models

* Added function "flow" to coerce distance matrices to flow

* Depreciated area.graph.statistics, added this functionality to graph.statistics with buffer argument 

* Changed graph.statistics to leverage velox extraction, orders of magnitude faster

GeNetIt_0.1-3
=================

* New function "node.statistics" for calculating raster statistics at nodes

GeNetIt_0.1-4
=================

* Due to depreciation, changed velox dependency to exactextractr for raster extraction

* Fixed bug in gravity function due to change in nlme formula interface 

* Fixed bug in gravity.es that resulted in an error with an unconstrained gravity model
  (thanks to Yoav Ram for identifying bug and suggesting a fix)