@@ -20,6 +20,7 @@
 #' @method plot gravity 
 #' @export
 plot.gravity <- function(x, type = 1, ...) {
+  options(warn=-1)
   if(type == 1) {
   # MODEL STRUCTURE I  
   	graphics::plot(stats::fitted(x$gravity, level=0), x$y, xlab = "Fitted Values (DPS)",
@@ -53,14 +54,17 @@ plot.gravity <- function(x, type = 1, ...) {
               graphics::abline(h=0, col="darkgreen")  
     }  
   if(type == 6) {
-  # DISTRIBUTION OF OBSERVED VS. PRED		
+  # DISTRIBUTION OF OBSERVED VS.PRED
+    #yname = strsplit(as.character(as.list(x$gravity$call)$fixed), "[~]")[[2]]
     oden <- stats::density(x$y)
     pden <- stats::density(stats::predict(x$gravity)) 
-    graphics::plot(oden, type="n", main="", xlim=c(min(x$y), max(x$y)), 
+    graphics::plot(oden, type="n", main="", 
+	               xlim=c(min(x$y), max(x$y)), 
          ylim=c(min(oden$y,pden$y), max(oden$y,pden$y)))     
             graphics::polygon(oden, col=grDevices::rgb(1,0,0,0.5))
             graphics::polygon(pden, col=grDevices::rgb(0,0,1,0.5))
       graphics::legend("topright", legend=c("Obs","Pred"), 
 	              fill=c(grDevices::rgb(1,0,0,0.4), grDevices::rgb(0,0,1,0.4)))
     }
+  options(warn=0)
 }
