@@ -25,21 +25,30 @@ is run (TRUE/FALSE)}
 \item{...}{Additional argument passed to nlme or lm}
 }
 \value{
-formula           Model formula
+formula           Model formula call
+
+fixed.formula     Model formula for fixed effects
+
+random.formula    Model formula for random (group) effects 
+                          (only for constrained models)
 
 gravity           Gravity model
 
+fit               Model Fitted Values
+
 AIC               AIC value for selected model
+
+RMSE              Root Mean Squared Error (based on bias corrected back transform)
 
 log.likelihood    Restricted log-likelihood at convergence
 
-x                 data.frame of independent variables
+group.names       Column name of grouping variable
 
-y                 Vector of dependent variable
+groups            Values of grouping variable
 
-groups            Ordered factor vector of grouping variable
+x                 data.frame of x variables
 
-fit               Model Fitted Values
+y                 Vector of y variable
 
 constrained       TRUE/FALSE indicating if model is constrained
 }
@@ -61,14 +70,13 @@ Depends: nlme, lattice
 \examples{
 library(nlme)
 data(ralu.model)
-str(ralu.model)
 
 # Gravity model	
 x = c("DEPTH_F", "HLI_F", "CTI_F", "cti", "ffp")
 ( gm <- gravity(y = "DPS", x = x, d = "DISTANCE", group = "FROM_SITE", 
                 data = ralu.model, ln = FALSE) )
 
-# Plot gravity results
+#' # Plot gravity results
  par(mfrow=c(2,3))
    for (i in 1:6) { plot(gm, type=i) } 
 
@@ -78,7 +86,7 @@ x = c("DEPTH_F", "HLI_F", "CTI_F", "cti", "ffp")
    x1 = c(x[1], x[-which(x \%in\% i)])  
    ll <- gravity(y = "DPS", x = x1, d = "DISTANCE", group = "FROM_SITE", 
                  data = ralu.model, ln = FALSE)$log.likelihood
-  cat("log likelihood for parameter set:", "(",x1,")", "=", ll, "\n")				 
+  cat("log likelihood for parameter set:", "(",x1,")", "=", ll, "\n") 
  }
 
 # Distance only (IBD) model
