@@ -26,3 +26,32 @@ returns raster value or statistics
 \note{
 If no buffer is specified, at-node raster values are returned
 }
+\examples{
+\donttest{
+library(sp)
+library(spdep)
+library(raster)
+  data(rasters)
+  data(ralu.site)
+
+xvars <- stack(rasters)
+  
+skew <- function(x, na.rm = TRUE) {  
+          if (na.rm) x <- x[!is.na(x)]
+          sum( (x - mean(x)) ^ 3) / ( length(x) * sd(x) ^ 3 )  
+		}
+
+# without buffer (values at point)
+system.time( {		
+ stats <- node.statistics(ralu.site, r = xvars[[-6]],
+             stats = c("min", "median", "max", "var", "skew")) 
+} )
+
+# with 1000m buffer (values around points)
+system.time( {		
+ stats <- node.statistics(ralu.site, r = xvars[[-6]], buffer = 1000,  
+             stats = c("min", "median", "max", "var", "skew")) 
+} ) 
+}
+
+}
